--- a/frontendjs/src/pages/ViewerOperasi/ViewerOperasi.scss
+++ b/frontendjs/src/pages/ViewerOperasi/ViewerOperasi.scss
@@ -85,7 +85,7 @@
                 .kontainer-tanggal {
                     display: flex;
                     flex-direction: column;
-                    width: 30%;
+                    width: 20%;
                     height: 100%;
                     background-color: #e89348;
                     border-top-left-radius: 10px;
@@ -105,27 +105,44 @@
                     flex-direction: column;
                     border: 2px solid #542c2c;
                     border-left: none;
-                    width: 70%;
+                    width: 60%;
                     height: 100%;
                     justify-content: center;
-                    border-top-right-radius: 10px;
-                    border-bottom-right-radius: 10px;
 
                     .isi-description {
                         display: flex;
                         flex-direction: row;
                         align-items: center;
+                        margin-left: 16px;
                         img {
                             width: 35px;
                             height: 35px;
                             object-fit: contain;
                         }
                         p {
-                            font-size: 2.5vh;
+                            font-size: 3.5vh;
                             margin: 0;
                             margin-left: 6px;
                             font-weight: 500;
                         }
+                    }
+                }
+
+                .kontainer-jam {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                    width: 20%;
+                    height: 100%;
+                    background-color: #e89348;
+                    border-top-right-radius: 10px;
+                    border-bottom-right-radius: 10px;
+
+                    .jam {
+                        font-size: 2.5vh;
+                        margin: 0;
+                        font-weight: 500;
                     }
                 }
             }
