--- a/frontendjs/src/pages/ViewerOperasi/ViewerOperasi.scss
+++ b/frontendjs/src/pages/ViewerOperasi/ViewerOperasi.scss
@@ -67,25 +67,22 @@
             display: flex;
             flex-direction: row;
             overflow: hidden;
-            .kontainer-data {
-                display: flex;
-                flex-direction: column;
-                width: 48%;
-                &:first-child {
-                    margin-right: 4%;
-                }
-            }
+            flex-wrap: wrap;
+            align-content: flex-start;
+            justify-content: space-between;
 
             .card-konten {
                 display: flex;
                 flex-direction: row;
                 align-items: center;
                 height: 24%;
-                margin-bottom: 10px;
+                width: 32%;
+                margin-bottom: 2vh;
+
                 .kontainer-tanggal {
                     display: flex;
                     flex-direction: column;
-                    width: 20%;
+                    width: 30%;
                     height: 100%;
                     background-color: #e89348;
                     border-top-left-radius: 10px;
@@ -93,7 +90,7 @@
                     justify-content: center;
 
                     .tanggal {
-                        font-size: 2.7vh;
+                        font-size: 2.5vh;
                         margin-bottom: 5px;
                         font-weight: 500;
                         margin-left: 10px;
@@ -105,9 +102,11 @@
                     flex-direction: column;
                     border: 2px solid #542c2c;
                     border-left: none;
-                    width: 60%;
+                    width: 70%;
                     height: 100%;
                     justify-content: center;
+                    border-top-right-radius: 10px;
+                    border-bottom-right-radius: 10px;
 
                     .isi-description {
                         display: flex;
@@ -120,29 +119,11 @@
                             object-fit: contain;
                         }
                         p {
-                            font-size: 3.5vh;
+                            font-size: 2.5vh;
                             margin: 0;
                             margin-left: 6px;
                             font-weight: 500;
                         }
-                    }
-                }
-
-                .kontainer-jam {
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: center;
-                    align-items: center;
-                    width: 20%;
-                    height: 100%;
-                    background-color: #e89348;
-                    border-top-right-radius: 10px;
-                    border-bottom-right-radius: 10px;
-
-                    .jam {
-                        font-size: 2.5vh;
-                        margin: 0;
-                        font-weight: 500;
                     }
                 }
             }
