--- a/frontendjs/src/pages/Viewer/Viewer.scss
+++ b/frontendjs/src/pages/Viewer/Viewer.scss
@@ -8,18 +8,31 @@
 
     .header-viewer {
         width: 100%;
-        height: 100px;
+        height: 10%;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        background-color: #ffcb46;
+        background-color: #e89348;
 
-        .gbr-header {
-            width: 300px;
-            height: 95px;
-            object-fit: contain;
-            margin-top: 25px;
-            margin-left: 20px;
+        .kontainer-gambar-header {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+
+            .gbr-header {
+                width: 300px;
+                height: 70%;
+                object-fit: contain;
+                margin-top: 12px;
+                margin-left: 20px;
+                &:last-child {
+                    margin-left: -50px;
+                }
+                &:first-child {
+                    margin-left: 150px;
+                }
+            }
         }
 
         .kontainer-waktu {
@@ -30,10 +43,11 @@
             font-weight: 700;
             margin-right: 10px;
             margin-top: 5px;
+            width: 300px;
 
             .jam-berjalan {
                 margin: 0;
-                font-size: 36px;
+                font-size: 26px;
                 margin-bottom: 5px;
                 margin-top: 10px;
                 margin-right: 10px;
@@ -42,7 +56,7 @@
 
             .tgl-berjalan {
                 margin: 0;
-                font-size: 24px;
+                font-size: 20px;
                 font-weight: 400;
             }
         }
@@ -68,8 +82,9 @@
                 font-size: 35px;
                 justify-content: space-between;
                 width: 40%;
-                background-color: #eee7df;
+                background-color: #ffffff;
                 border-radius: 25px;
+                border: 4px #e89348 solid;
 
                 .judul {
                     font-size: 30px;
@@ -105,7 +120,8 @@
                 height: 95%;
                 border-radius: 15px;
                 margin-right: 1%;
-                background-color: #eee7df;
+                background-color: #ffffff;
+                border: 4px #e89348 solid;
 
                 .number {
                     margin: 0;
@@ -124,7 +140,7 @@
 
     .running-text-viewer {
         display: flex;
-        background-color: #ffcb46;
+        background-color: #e89348;
         width: 100%;
         margin: 0;
         height: 60px;
