--- a/frontendjs/src/assets/scss/structure/_topbar.scss
+++ b/frontendjs/src/assets/scss/structure/_topbar.scss
@@ -22,7 +22,7 @@
 }
 
 .navbar-header {
-    background-color: $gray-200; //untuk backgrund navbar
+    background-color: $white; //untuk backgrund navbar
     display: flex;
     -ms-flex-pack: justify;
     justify-content: space-between;
