--- a/frontendjs/src/pages/Odontogram/Odontogram.scss
+++ b/frontendjs/src/pages/Odontogram/Odontogram.scss
@@ -1,82 +1,100 @@
 .kontainer-all {
     margin-top: 200px;
-    .odontogram-gigi {
-        margin-top: 20px;
-        display: flex;
-        .kontainer-gigi {
-            transform: scale(0.6);
-            margin-left: 30px;
-            position: relative;
-            width: 70px;
-            height: 70px;
-            .kontainer-gigi-bawah {
-                position: absolute;
-                top: 48px;
-                width: 61px;
-                height: 36px;
-                .gigi-bawah {
-                    width: 50px;
-                    height: 17px;
-                    background: red;
-                    transform: perspective(10px) rotateX(20deg);
-                    border-top: 4px solid black;
-                    border-bottom: 1px solid black;
-                    border-right: 2px solid black;
-                    border-left: 2px solid black;
+
+    .kontainer-all-gigi {
+        $scale: 0.5;
+
+        .odontogram-gigi {
+            margin-top: calc(20px * #{$scale});
+            display: flex;
+
+            .kontainer-gigi {
+                margin-left: calc(30px * #{$scale});
+                position: relative;
+                width: calc(70px * #{$scale});
+                height: calc(70px * #{$scale});
+                .gigi-tengah {
+                    position: absolute;
+                    width: calc(43px * #{$scale});
+                    height: calc(43px * #{$scale});
+                    left: calc(3px * #{$scale});
+                    top: calc(10px * #{$scale});
+                    border: calc(2px * #{$scale}) solid black;
                 }
-            }
-            .kontainer-gigi-kanan {
-                position: absolute;
-                top: 24px;
-                left: 24px;
-                height: 61px;
-                width: 36px;
-                .gigi-kanan {
-                    width: 50px;
-                    height: 17px;
-                    background: red;
-                    transform: perspective(10px) rotateX(20deg);
-                    border-top: 4px solid black;
-                    border-bottom: 1px solid black;
-                    border-right: 2px solid black;
-                    border-left: 2px solid black;
-                    rotate: -90deg;
+
+                .kontainer-gigi-bawah {
+                    position: absolute;
+                    top: calc(48px * #{$scale});
+                    width: calc(61px * #{$scale});
+                    height: calc(36px * #{$scale});
+                    .gigi-bawah {
+                        width: calc(50px * #{$scale});
+                        height: calc(17px * #{$scale});
+                        background: red;
+                        transform: perspective(10px)
+                            rotateX(calc(20deg / #{$scale}));
+                        border-top: calc(4px * #{$scale}) solid black;
+                        border-bottom: calc(1px * #{$scale}) solid black;
+                        border-right: calc(2px * #{$scale}) solid black;
+                        border-left: calc(2px * #{$scale}) solid black;
+                    }
                 }
-            }
-            .kontainer-gigi-atas {
-                position: absolute;
-                top: 0;
-                width: 61px;
-                height: 36px;
-                .gigi-atas {
-                    width: 50px;
-                    height: 17px;
-                    background: red;
-                    transform: perspective(10px) rotateX(20deg);
-                    border-top: 4px solid black;
-                    border-bottom: 1px solid black;
-                    border-right: 2px solid black;
-                    border-left: 2px solid black;
-                    rotate: -180deg;
+                .kontainer-gigi-kanan {
+                    position: absolute;
+                    top: calc(24px * #{$scale});
+                    left: calc(24px * #{$scale});
+                    width: calc(61px * #{$scale});
+                    height: calc(36px * #{$scale});
+                    .gigi-kanan {
+                        width: calc(50px * #{$scale});
+                        height: calc(17px * #{$scale});
+                        background: red;
+                        transform: perspective(10px)
+                            rotateX(calc(20deg / #{$scale}));
+                        border-top: calc(4px * #{$scale}) solid black;
+                        border-bottom: calc(1px * #{$scale}) solid black;
+                        border-right: calc(2px * #{$scale}) solid black;
+                        border-left: calc(2px * #{$scale}) solid black;
+                        rotate: -90deg;
+                    }
                 }
-            }
-            .kontainer-gigi-kiri {
-                position: absolute;
-                top: 0;
-                left: -24px;
-                top: 24px;
-                width: 61px;
-                height: 36px;
-                .gigi-kiri {
-                    width: 50px;
-                    height: 17px;
-                    background: red;
-                    transform: perspective(10px) rotateX(20deg);
-                    border-top: 4px solid black;
-                    border-bottom: 1px solid black;
-                    border-right: 2px solid black;
-                    border-left: 2px solid black;
-                    rotate: 90deg;
+                .kontainer-gigi-atas {
+                    position: absolute;
+                    top: 0;
+                    width: calc(61px * #{$scale});
+                    height: calc(36px * #{$scale});
+                    .gigi-atas {
+                        width: calc(50px * #{$scale});
+                        height: calc(17px * #{$scale});
+                        background: red;
+                        transform: perspective(10px)
+                            rotateX(calc(20deg / #{$scale}));
+                        border-top: calc(4px * #{$scale}) solid black;
+                        border-bottom: calc(1px * #{$scale}) solid black;
+                        border-right: calc(2px * #{$scale}) solid black;
+                        border-left: calc(2px * #{$scale}) solid black;
+                        rotate: -180deg;
+                    }
+                }
+                .kontainer-gigi-kiri {
+                    position: absolute;
+                    top: 0;
+                    left: calc(-24px * #{$scale});
+                    top: calc(24px * #{$scale});
+                    width: calc(61px * #{$scale});
+                    height: calc(36px * #{$scale});
+                    .gigi-kiri {
+                        width: calc(50px * #{$scale});
+                        height: calc(17px * #{$scale});
+                        background: red;
+                        transform: perspective(10px)
+                            rotateX(calc(20deg / #{$scale}));
+                        border-top: calc(4px * #{$scale}) solid black;
+                        border-bottom: calc(1px * #{$scale}) solid black;
+                        border-right: calc(2px * #{$scale}) solid black;
+                        border-left: calc(2px * #{$scale}) solid black;
+                        rotate: 90deg;
+                    }
                 }
             }
         }
