--- a/frontendjs/src/pages/Odontogram/Odontogram.scss
+++ b/frontendjs/src/pages/Odontogram/Odontogram.scss
@@ -4,96 +4,140 @@
     .kontainer-all-gigi {
         $scale: 0.5;
 
-        .odontogram-gigi {
-            margin-top: calc(20px * #{$scale});
+        .all-kuadran {
             display: flex;
-
-            .kontainer-gigi {
-                margin-left: calc(30px * #{$scale});
-                position: relative;
-                width: calc(70px * #{$scale});
-                height: calc(70px * #{$scale});
-                .gigi-tengah {
-                    position: absolute;
-                    width: calc(43px * #{$scale});
-                    height: calc(43px * #{$scale});
-                    left: calc(3px * #{$scale});
-                    top: calc(10px * #{$scale});
-                    border: calc(2px * #{$scale}) solid black;
+            flex-direction: column;
+            width: 100%;
+            .isi-kuadran {
+                display: flex;
+                flex-direction: row;
+                width: 100%;
+                .kuadran1-gigi {
+                    margin-top: calc(20px * #{$scale});
+                    display: flex;
+                    width: 48%;
+                    flex-direction: row-reverse;
                 }
 
-                .kontainer-gigi-bawah {
-                    position: absolute;
-                    top: calc(48px * #{$scale});
-                    width: calc(61px * #{$scale});
-                    height: calc(36px * #{$scale});
-                    .gigi-bawah {
-                        width: calc(50px * #{$scale});
-                        height: calc(17px * #{$scale});
-                        background: red;
-                        transform: perspective(10px)
-                            rotateX(calc(20deg / #{$scale}));
-                        border-top: calc(4px * #{$scale}) solid black;
-                        border-bottom: calc(1px * #{$scale}) solid black;
-                        border-right: calc(2px * #{$scale}) solid black;
-                        border-left: calc(2px * #{$scale}) solid black;
+                .kuadran2-gigi {
+                    width: 48%;
+                    margin-left: 4%;
+                    margin-top: calc(20px * #{$scale});
+                    display: flex;
+                }
+            }
+        }
+
+        .kontainer-gigi {
+            margin-left: calc(30px * #{$scale});
+            position: relative;
+            width: calc(70px * #{$scale});
+            height: calc(70px * #{$scale});
+            .gigi-tengah {
+                position: absolute;
+                width: calc(38px * #{$scale});
+                height: calc(38px * #{$scale});
+                left: calc(6px * #{$scale});
+                top: calc(15px * #{$scale});
+                border: calc(2px * #{$scale}) solid black;
+                background: red;
+                &:hover {
+                    cursor: pointer;
+                    filter: opacity(0.5);
+                }
+            }
+
+            .kontainer-gigi-bawah {
+                position: absolute;
+                top: calc(48px * #{$scale});
+                width: calc(0px * #{$scale});
+                height: calc(0px * #{$scale});
+                .gigi-bawah {
+                    width: calc(50px * #{$scale});
+                    height: calc(20px * #{$scale});
+                    background: red;
+                    transform: perspective(10px)
+                        rotateX(calc(21deg / #{$scale}));
+                    border-top: calc(4px * #{$scale}) solid black;
+                    border-bottom: calc(1px * #{$scale}) solid black;
+                    border-right: calc(2px * #{$scale}) solid black;
+                    border-left: calc(2px * #{$scale}) solid black;
+
+                    &:hover {
+                        cursor: pointer;
+                        filter: opacity(0.5);
                     }
                 }
-                .kontainer-gigi-kanan {
-                    position: absolute;
-                    top: calc(24px * #{$scale});
-                    left: calc(24px * #{$scale});
-                    width: calc(61px * #{$scale});
-                    height: calc(36px * #{$scale});
-                    .gigi-kanan {
-                        width: calc(50px * #{$scale});
-                        height: calc(17px * #{$scale});
-                        background: red;
-                        transform: perspective(10px)
-                            rotateX(calc(20deg / #{$scale}));
-                        border-top: calc(4px * #{$scale}) solid black;
-                        border-bottom: calc(1px * #{$scale}) solid black;
-                        border-right: calc(2px * #{$scale}) solid black;
-                        border-left: calc(2px * #{$scale}) solid black;
-                        rotate: -90deg;
+            }
+            .kontainer-gigi-kanan {
+                position: absolute;
+                top: calc(24px * #{$scale});
+                left: calc(24px * #{$scale});
+                width: calc(0px * #{$scale});
+                height: calc(0px * #{$scale});
+                z-index: 2;
+                .gigi-kanan {
+                    width: calc(50px * #{$scale});
+                    height: calc(20px * #{$scale});
+                    background: red;
+                    transform: perspective(10px)
+                        rotateX(calc(21deg / #{$scale}));
+                    border-top: calc(4px * #{$scale}) solid black;
+                    border-bottom: calc(1px * #{$scale}) solid black;
+                    border-right: calc(2px * #{$scale}) solid black;
+                    border-left: calc(2px * #{$scale}) solid black;
+                    rotate: -90deg;
+
+                    &:hover {
+                        cursor: pointer;
+                        filter: opacity(0.5);
                     }
                 }
-                .kontainer-gigi-atas {
-                    position: absolute;
-                    top: 0;
-                    width: calc(61px * #{$scale});
-                    height: calc(36px * #{$scale});
-                    .gigi-atas {
-                        width: calc(50px * #{$scale});
-                        height: calc(17px * #{$scale});
-                        background: red;
-                        transform: perspective(10px)
-                            rotateX(calc(20deg / #{$scale}));
-                        border-top: calc(4px * #{$scale}) solid black;
-                        border-bottom: calc(1px * #{$scale}) solid black;
-                        border-right: calc(2px * #{$scale}) solid black;
-                        border-left: calc(2px * #{$scale}) solid black;
-                        rotate: -180deg;
+            }
+            .kontainer-gigi-atas {
+                position: absolute;
+                top: 0;
+                width: calc(0px * #{$scale});
+                height: calc(0px * #{$scale});
+                .gigi-atas {
+                    width: calc(50px * #{$scale});
+                    height: calc(20px * #{$scale});
+                    background: red;
+                    transform: perspective(10px)
+                        rotateX(calc(21deg / #{$scale}));
+                    border-top: calc(4px * #{$scale}) solid black;
+                    border-bottom: calc(1px * #{$scale}) solid black;
+                    border-right: calc(2px * #{$scale}) solid black;
+                    border-left: calc(2px * #{$scale}) solid black;
+                    rotate: -180deg;
+                    &:hover {
+                        cursor: pointer;
+                        filter: opacity(0.5);
                     }
                 }
-                .kontainer-gigi-kiri {
-                    position: absolute;
-                    top: 0;
-                    left: calc(-24px * #{$scale});
-                    top: calc(24px * #{$scale});
-                    width: calc(61px * #{$scale});
-                    height: calc(36px * #{$scale});
-                    .gigi-kiri {
-                        width: calc(50px * #{$scale});
-                        height: calc(17px * #{$scale});
-                        background: red;
-                        transform: perspective(10px)
-                            rotateX(calc(20deg / #{$scale}));
-                        border-top: calc(4px * #{$scale}) solid black;
-                        border-bottom: calc(1px * #{$scale}) solid black;
-                        border-right: calc(2px * #{$scale}) solid black;
-                        border-left: calc(2px * #{$scale}) solid black;
-                        rotate: 90deg;
+            }
+            .kontainer-gigi-kiri {
+                position: absolute;
+                top: 0;
+                left: calc(-24px * #{$scale});
+                top: calc(24px * #{$scale});
+                width: calc(0px * #{$scale});
+                height: calc(0px * #{$scale});
+                .gigi-kiri {
+                    width: calc(50px * #{$scale});
+                    height: calc(20px * #{$scale});
+                    background: red;
+                    transform: perspective(10px)
+                        rotateX(calc(21deg / #{$scale}));
+                    border-top: calc(4px * #{$scale}) solid black;
+                    border-bottom: calc(1px * #{$scale}) solid black;
+                    border-right: calc(2px * #{$scale}) solid black;
+                    border-left: calc(2px * #{$scale}) solid black;
+                    rotate: 90deg;
+
+                    &:hover {
+                        cursor: pointer;
+                        filter: opacity(0.5);
                     }
                 }
             }
